--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,45 @@
 h1{
-    margin-left:15px ;
     font-family: 'museo-sans', sans-serif;
     font-weight: 900;
+    font-size: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    margin: 30px 200px 30px;
+}
+
+.home_img_div{
+
+    margin: 20px 300px 20px;
+}
+
+.home_img{
+    border-radius:5px;
+    width:100%;
+}
+
+@media  screen and (max-width: 1300px){
+    .home_img_div{
+        margin: 20px 200px 20px;
+    }
+}
+
+
+
+@media  screen and (max-width: 992px){
+    h1{
+        margin: 20px 70px 20px;
+        font-size:40px;
+    }
+    
+    .home_img_div{
+        margin: 20px 100px 20px;
+    }
+}
+
+@media  screen and (max-width: 768px){
+    .home_img_div{
+        margin: 20px 50px 20px;
+    }
 }
