--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+img.explorer_logo {
+   content:url(../images/IE_logo.png);
+   width:20px;
+   position: relative;
+   top: -2px;
+   opacity: 0.8;
+}
+
 h1{
     font-family: 'museo-sans', sans-serif;
     font-weight: 900;
@@ -25,6 +33,12 @@ h2{
     margin: 20px 300px 20px;
 }
 
+.E_img_div{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .home_img{
     border-radius:5px;
     width:100%;
@@ -32,7 +46,8 @@ h2{
 
 .add_img{
     border-radius:5px;
-    width:100%;
+    height:auto;
+    width:340px;
 }
 
 .container {
@@ -65,6 +80,9 @@ content{
     .home_img_div{
         margin: 20px 200px 20px;
     }
+    section {
+        margin: 0px 100px 0px 170px;
+    }
 }
 
 
@@ -81,6 +99,16 @@ content{
     }
     .home_img_div{
         margin: 20px 100px 20px;
+    }
+    section {
+        margin: 0px 100px 0px 100px;
+        display: block;
+    }
+    aside{
+        display: block;
+    }
+    content{
+        display: block;
     }
 }
 
