--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,21 @@ a {
     color: black;
 }
 
+.footer {
+    border-top: 2px solid #CFD8DC;
+    margin-top: 20px;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height:70px;
+    color: white;
+    text-align: center;
+}
+
+.githublink{
+    text-decoration: none;
+}
+
 @media  screen and (max-width: 1300px){
     .home_img_div{
         margin: 20px 200px 20px;
